# nockchain

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
crates/hoonc/src/: lib.rs
crates/kernels/src/: nockchain_peek.rs
crates/nockapp/: Cargo.toml
crates/nockapp-grpc/: Cargo.toml
crates/nockapp-grpc-proto/proto/nockchain/public/v2/: nockchain.proto
crates/nockapp-grpc-proto/src/v1/: convert.rs
crates/nockapp-grpc-proto/src/v2/: convert.rs
crates/nockapp-grpc/proto/: nockapp.proto
crates/nockapp-grpc/src/: client.rs  error.rs  server.rs
crates/nockapp-grpc/src/services/public_nockchain/v1/: cache.rs  driver.rs
crates/nockapp-grpc/src/services/public_nockchain/v2/: block_explorer.rs  cache.rs  driver.rs  metrics.rs  mod.rs  server.rs
crates/nockapp/src/: lib.rs
crates/nockapp/src/drivers/: file.rs  indexer.rs  markdown.rs  mod.rs
crates/nockapp/src/drivers/http/: http.rs
crates/nockapp/src/kernel/: form.rs
crates/nockapp/src/nockapp/: error.rs
crates/nockapp/src/noun/: extensions.rs
crates/nockapp/src/utils/: error.rs  mod.rs
crates/nockchain/: Cargo.toml
crates/nockchain-api/: Cargo.toml  README.md
crates/nockchain-api/benches/: peek_refresh.rs
crates/nockchain-api/src/: main.rs
crates/nockchain-explorer-tui/: Cargo.toml  README.md
crates/nockchain-explorer-tui/src/: main.rs
crates/nockchain-libp2p-io/src/: config.rs  driver.rs  messages.rs
crates/nockchain-math/: Cargo.toml
crates/nockchain-math/src/: shape.rs
crates/nockchain-math/src/crypto/: argon2.rs
crates/nockchain-math/src/tip5/: hash.rs
crates/nockchain-math/src/zoon/: zmap.rs
crates/nockchain-types/src/tx_engine/common/: mod.rs  page.rs
crates/nockchain-types/src/tx_engine/v1/: note.rs  tx.rs
crates/nockchain-wallet/: Cargo.toml  README.md
crates/nockchain-wallet/src/: command.rs  main.rs  recipient.rs
crates/nockchain/src/: config.rs  indexer.rs  lib.rs  main.rs  mining.rs
crates/nockchain/src/indexer/: wallet.rs
crates/nockup/: Cargo.toml  README.md  install.sh  quick_start.sh
crates/nockup/replit/: setup-nockup.sh
crates/nockup/src/commands/: common.rs
crates/nockvm/rust/nockvm/: Cargo.toml
crates/nockvm/rust/nockvm/src/: ext.rs  lib.rs
crates/nockvm/rust/nockvm/src/trace/: json.rs  tracing_backend.rs
crates/noun-serde/: Cargo.toml
crates/noun-serde-derive/: Cargo.toml
crates/noun-serde-derive/src/: lib.rs
crates/noun-serde-derive/tests/: untagged_enum_regression.rs
crates/noun-serde/src/: lib.rs  wallet.rs
crates/noun-serde/tests/: serde.rs
crates/prover-gpu-test/: Cargo.toml
crates/prover-gpu-test/src/: main.rs
crates/raw-tx-checker/: Cargo.toml
crates/raw-tx-checker/src/: main.rs
crates/zkvm-jetpack/: Cargo.toml
crates/zkvm-jetpack/src/jets/: cheetah_jets.rs  compute_table_jets_v2.rs  crypto_jets.rs  memory_table_jets_v2.rs  table_utils.rs  trace_gen_jets.rs
hoon/apps/dumbnet/: inner.hoon
hoon/apps/wallet/: wallet.hoon
hoon/apps/wallet/lib/: tx-builder-v1.hoon  tx-builder.hoon  types.hoon  utils.hoon
hoon/common/: tx-engine-0.hoon  tx-engine-1.hoon  tx-engine.hoon
prover-gpu/: CMakeLists.txt  Makefile  README.md
prover-gpu/src/: api.cpp  kernel.cu  main.cpp
scripts/: run_nockchain_node_fakenet.sh
src/indexer/: wallet.rs.new
