[package]
name = "nockchain-api"
version.workspace = true
edition.workspace = true

[features]
default = []
tracing-heap = ["tracy-client"]
malloc = []

[dependencies]
kernels = { workspace = true, features = ["dumb"] }
nockapp.workspace = true
nockchain.workspace = true
nockvm.workspace = true
zkvm-jetpack.workspace = true

clap.workspace = true
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
] }
tokio.workspace = true
tracy-client = { workspace = true, optional = true }

[dev-dependencies]
nockchain-types = { workspace = true }
noun-serde = { workspace = true }
tokio-test = "0.4"
tempfile = { workspace = true }
nockapp-grpc-proto = { workspace = true }
tonic = { workspace = true }

[[bench]]
name = "peek_refresh"
harness = false
