[package]
name = "nockchain"
build = "build.rs"
publish = false
version.workspace = true
edition.workspace = true

[features]
bazel_build = []
jemalloc = ["tikv-jemallocator"]
tracing-heap = ["tikv-jemallocator", "tracy-client"]

[dependencies]
hoonc.workspace = true
kernels = { workspace = true, features = ["dumb", "miner"] }
nockapp.workspace = true
nockapp-grpc.workspace = true
nockvm.workspace = true
nockvm_macros.workspace = true
rocksdb = "0.24"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"

bitcoincore-rpc.workspace = true
bs58.workspace = true
clap.workspace = true
equix.workspace = true
futures.workspace = true
ibig.workspace = true
libp2p = { workspace = true, features = [
    "ping",
    "kad",
    "identify",
    "quic",
    "tls",
    "dns",
    "tokio",
    "macros",
    "request-response",
    "cbor",
] }
nockchain-libp2p-io.workspace = true
num_cpus = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
termcolor.workspace = true
tikv-jemallocator = { workspace = true, optional = true }
tracing.workspace = true
tracing-test.workspace = true
tracy-client = { workspace = true, optional = true }

zkvm-jetpack.workspace = true

[build-dependencies]
vergen = { workspace = true, features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
