[package]
name = "nockup"
version = "0.4.0"
edition = "2021"
authors = [""]
description = "A developer support framework for NockApp development"
license = "MIT"
repository = "https://github.com/sigilante/nockup"
homepage = "https://github.com/sigilante/nockup"
documentation = "https://docs.nockchain.org/"
readme = "README.md"
keywords = ["nockchain", "nockapp", "development", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nockup"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
colored = "2.0"
dirs = { workspace = true }
flate2 = "1.1.5"
fs_extra = "1.3"
handlebars = "6.3.2"
hex = { workspace = true }
openssl-sys = { version = "0.9", optional = true }
proptest = "1.9.0"
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tar = "0.4.44"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "process"] }
toml = "0.9.8"
walkdir = "2.5.0"
which = "8.0"

[build-dependencies]
# For generating version info at build time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# Performance profiling (optional)
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
vendored-openssl = ["openssl-sys", "openssl-sys/vendored"]